@@ -3,6 +3,7 @@ HEAD
 ====
 Fixes:
 - xt_RAWNAT: ensure correct operation in the presence of IPv4 options
+- xt_geoip: do not throw a warnings when country database is size 0
 
 
 v2.2 (2013-03-31)
